--- a/index.html
+++ b/index.html
@@ -47,19 +47,19 @@
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
         <ul class="nav navbar-nav">
             <li>
-                <a href="land">LAND</a>
+                <a href="land">SCENERY</a>
             </li>
             <li>
                 <a href="macro">MACRO</a>
             </li>
             <li>
-                <a href="life">LIFE</a>
+                <a href="life">PERSONAL</a>
             </li>
             <li>
                 <a href="video">VIDEO</a>
             </li>
             <li>
-                <a href="contact">INSTAGRAM</a>
+                <a href="contact">CONTACT</a>
             </li>
         </ul>
     </div>
@@ -73,7 +73,7 @@
             <img class="frontpage"  src="images/IMG0994.png">
             <a href="land">
                 <div class="overlay">
-                    <h2>Land</h2>
+                    <h2>Scenery</h2>
                 </div>
             </a>
         </div>
@@ -93,7 +93,7 @@
             <img class="frontpage" src="images/IMG3907.png">
             <a href="life">
             <div class="overlay">
-                <h2>Life</h2>
+                <h2>Personal</h2>
             </div>
             </a>
         </div>
@@ -104,7 +104,7 @@
             <!--<img class="frontpage" src="images/IMG0237.png">-->
             <a href="contact">
                 <div class="overlay">
-                    <h2>Instagram</h2>
+                    <h2>Contact</h2>
                 </div>
             </a>
             </div>
