--- a/land/index.html
+++ b/land/index.html
@@ -58,19 +58,19 @@
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav">
                     <li class="active">
-                        <a href=".">LAND</a>
+                        <a href=".">SCENERY</a>
                     </li>
                     <li>
                         <a href="../macro">MACRO</a>
                     </li>
                     <li>
-                        <a href="../life">LIFE</a>
+                        <a href="../life">PERSONAL</a>
                     </li>
                     <li>
                         <a href="../video">VIDEO</a>
                     </li>
                     <li>
-                        <a href="../contact">INSTAGRAM</a>
+                        <a href="../contact">CONTACT</a>
                     </li>
                 </ul>
             </div>
