--- a/video/index.html
+++ b/video/index.html
@@ -59,19 +59,19 @@
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav">
                     <li>
-                        <a href="../land">LAND</a>
+                        <a href="../land">SCENERY</a>
                     </li>
                     <li>
                         <a href="../macro">MACRO</a>
                     </li>
                     <li>
-                        <a href="../life">LIFE</a>
+                        <a href="../life">PERSONAL</a>
                     </li>
                     <li class="active">
                         <a href=".">VIDEO</a>
                     </li>
                     <li>
-                        <a href="../contact">INSTAGRAM</a>
+                        <a href="../contact">CONTACT</a>
                     </li>
                 </ul>
             </div>
