--- a/macro/index.html
+++ b/macro/index.html
@@ -57,19 +57,19 @@
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav">
                     <li>
-                        <a href="../land">LAND</a>
+                        <a href="../land">SCENERY</a>
                     </li>
                     <li class="active">
                         <a href=".">MACRO</a>
                     </li>
                     <li>
-                        <a href="../life">LIFE</a>
+                        <a href="../life">PERSONAL</a>
                     </li>
                     <li>
                         <a href="../video">VIDEO</a>
                     </li>
                     <li>
-                        <a href="../contact">INSTAGRAM</a>
+                        <a href="../contact">CONTACT</a>
                     </li>
                 </ul>
             </div>
