--- a/life/index.html
+++ b/life/index.html
@@ -7,7 +7,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>e. wong life</title>
+    <title>e. wong personal</title>
 
     <!-- Bootstrap core CSS -->
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css"
@@ -34,6 +34,15 @@
     <link href='https://fonts.googleapis.com/css?family=Josefin+Sans:100,400,700' rel='stylesheet' type='text/css'>
     <link href='https://fonts.googleapis.com/css?family=Quicksand:400,300,700' rel='stylesheet' type='text/css'>
     <link href='https://fonts.googleapis.com/css?family=Work+Sans:200,400' rel='stylesheet' type='text/css'>
+
+    <style>
+        .slider-pro {
+            height: 100%;
+            border: 0;
+            overflow: auto;
+            -webkit-overflow-scrolling: touch;
+        }
+    </style>
 </head>
 <body>
 
@@ -142,12 +151,12 @@
     </footer>
 </div>
 <!-- /.container -->
-<script src="http://vjs.zencdn.net/5.10.4/video.js"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"
         integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS"
         crossorigin="anonymous"></script>
 <script src="../vendor/slider-pro/jquery.sliderPro.js"></script>
+<script src="../vendor/inobounce/inobounce.js"></script>
 <script>
     $(document).ready(function () {
         if ($(window).width() < 759) {
