Issue: removed fixed position of slider. made it difficult to navigate menu

--- a/life/index.html
+++ b/life/index.html
@@ -45,7 +45,7 @@
 
     <!--</div>-->
     <!-- Navigation -->
-    <div class="slider-pro" id="my-slider" style="position: fixed">
+    <div class="slider-pro" id="my-slider">
         <div class="sp-slides">
             <div class="sp-slide">
                 <img class="sp-image" src="img/IMG0703.jpg">
