--- a/life/index.html
+++ b/life/index.html
@@ -91,6 +91,11 @@
                 <img class="sp-image" src="img/IMG9334.jpg">
             </div>
         </div>
+        <div class="sp-slides">
+            <div class="sp-slide">
+                <img class="sp-image" src="img/IMG0077.jpg">
+            </div>
+        </div>
     </div>
     <footer style="position: fixed; top: 0; left: 0; background: rgba(0,0,0,0); width: 100%">
         <div class="container">
@@ -139,7 +144,7 @@
     <footer style="position: fixed; left: 0; bottom:0; background: rgba(0,0,0,0); width: 100%">
         <div class="container">
             <div class="col-lg-12 text-center">
-                <p class="copyright">Copyright &copy; eric wong 2016</p>
+                <p class="copyright">&copy;eric wong 2016</p>
             </div>
         </div>
     </footer>
