--- a/contact/index.html
+++ b/contact/index.html
@@ -91,7 +91,7 @@
     <footer>
         <div class="container">
             <div class="col-lg-12 text-center">
-                <p class="copyright">Copyright &copy; eric wong 2016</p>
+                <p class="copyright">&copy; eric wong 2016</p>
             </div>
         </div>
     </footer>
