--- a/macro/index.html
+++ b/macro/index.html
@@ -84,7 +84,7 @@
 
     <footer>
             <div class="col-lg-12 text-center">
-                <p class="copyright">Copyright &copy; eric wong 2016</p>
+                <p class="copyright">&copy; eric wong 2016</p>
             </div>
     </footer>
 </div>
